<resources>
    <string name="app_name">IRController</string>
    <string name="menu_append">Append</string>

    <string name="menu_operation">Operation</string>
    <string name="menu_operation_edit">Edit</string>
    <string name="menu_operation_delete">Delete</string>

    <string name="intent_extra_device_info">DeviceInfo</string>
    <string name="intent_extra_command_info">CommandInfo</string>

    <string name="dialog_title_create">Create</string>
    <string name="dialog_title_edit">Edit</string>
    <string name="dialog_title_no_support">No Support</string>
    <string name="dialog_device_format">Format</string>
    <string name="dialog_device_format_none">None</string>
    <string name="dialog_device_format_nec">NEC</string>
    <string name="dialog_device_format_aeha">AEHA</string>
    <string name="dialog_device_format_sony">SONY</string>
    <string name="dialog_device_customer">Customer</string>
    <string name="dialog_device_customer_hint">ex)BF40</string>
    <string name="dialog_device_name">Name</string>
    <string name="dialog_device_name_hint">Input Name</string>
    <string name="dialog_command_name">Name</string>
    <string name="dialog_command_name_hint">Input Name</string>
    <string name="dialog_command_data">Data</string>
    <string name="dialog_command_data_hint">ex)12,1F...</string>
    <string name="dialog_result_ok">OK</string>
    <string name="dialog_result_cancel">Cancel</string>

    <string name="title_activity_command_choice">Command Choice</string>
    <string name="title_activity_device_choice">Device Choice</string>

</resources>
