<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="h_adachi.com.ircontroller.CommitDeviceDialog">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_device_format" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_device_format">
            <RadioButton
                android:checked="true"
                android:text="@string/dialog_device_format_nec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_device_format_nec"/>
            <RadioButton
                android:text="@string/dialog_device_format_aeha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_device_format_aeha"/>
            <RadioButton
                android:text="@string/dialog_device_format_sony"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_device_format_sony"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_device_name" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_device_name_hint"
            android:id="@+id/dialog_device_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_device_customer" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_device_customer_hint"
            android:id="@+id/dialog_device_customer"/>

    </LinearLayout>
</FrameLayout>
